--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- nav -->
+  <nav class="flexBasic container">
+    <a href="" class="logo">Swimming<i class="far fa-registered"></i></a>
+    <ul class="flexBasic">
+      <li><a class="current" href="">Home</a></li>
+      <li><a href="">About us</a></li>
+      <li><a href="">Gallery</a></li>
+      <li><a href="">Blog</a></li>
+      <li><a href="">Contacts</a></li>
+    </ul>
+  </nav>
 
 </body>
 </html>
