--- a/index.html
+++ b/index.html
@@ -20,8 +20,33 @@
       <li><a href="">Contacts</a></li>
     </ul>
   </nav>
+
   <!-- header -->
   <header></header>
+
+  <section class="offers container flexBasic">
+    <article>
+      <h2>Register for swim lessons</h2>
+      <p>Our experienced instructors offer a va-<br>riety of swimming lessons for children and teens.</p>
+      <i class="fas fa-chevron-right"></i>
+    </article>
+    <article>
+      <h2>Franchise Opportu-<br>nities</h2>
+      <p>Swimming School Franchise is posi-<br>tioned as the leader in the thriving children's education.</p>
+      <i class="fas fa-chevron-right"></i>
+    </article>
+    <article>
+      <h2>What Level Is My Child?</h2>
+      <p>Use our Level Finder to determine your swimmer's level or call us for any assistance you need!</p>
+      <i class="fas fa-chevron-right"></i>
+    </article>
+    <article>
+      <h2>Locate a Swim School</h2>
+      <p>Use our Level Finder to determine your swimmer's level or call us for any assistance you need!</p>
+      <i class="fas fa-chevron-right"></i>
+    </article>
+  </section>
+
 
 </body>
 </html>
