--- a/index.html
+++ b/index.html
@@ -36,16 +36,34 @@
       <i class="fas fa-chevron-right"></i>
     </article>
     <article>
-      <h2>What Level Is My Child?</h2>
+      <h2>What Level Is My<br> Child?</h2>
       <p>Use our Level Finder to determine your swimmer's level or call us for any assistance you need!</p>
       <i class="fas fa-chevron-right"></i>
     </article>
     <article>
-      <h2>Locate a Swim School</h2>
+      <h2>Locate a Swim <br>School</h2>
       <p>Use our Level Finder to determine your swimmer's level or call us for any assistance you need!</p>
       <i class="fas fa-chevron-right"></i>
     </article>
   </section>
+
+  <!-- welcome -->
+  <section class="welcome flexBasic container">
+    <article>
+      <h3>Welcome to our school!</h3>
+      <p>Swiming School is proud to provide state-of-the-art aquatic facilities that are dedicated to indoor swim classes and programs for children.</p>
+      <button>Read More</button>
+    </article>
+    <article></article>
+    <article></article>
+    <article>
+      <h3>Swim lessons for Children and teens</h3>
+      <p>We offer variety of private and group lessons for children and teens. The lessons and swimming courses include everything your kid needs to swim confidently.</p>
+      <button>Read More</button>
+    </article>
+  </section>
+
+
 
 
 </body>
